# sqlex

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml
sql/: small.sql
src/: capture.rs  cmd.rs  lib.rs  main.rs  parser.rs  query.scm  rules.rs  settings.rs  sqlparse.rs  types.rs
src/parser/: format_trait.rs  mod.rs  parse_utils.rs  parser.rs  parser_types.rs  sql.pest
src/parser/statements/: create_database.rs  create_table.rs  drop_table.rs  insert.rs  mod.rs  use_database.rs
src/parser/statements/create_database/: mod.rs  template.sql
src/parser/statements/create_table/: mod.rs  template.sql
src/parser/statements/drop_table/: mod.rs  template.sql
src/parser/statements/insert/: mod.rs
src/parser/statements/use_database/: mod.rs  template.sql
src/parser/types/: assignments.rs  column.rs  data_type.rs  database.rs  database_option.rs  default_value.rs  delete.rs  foreign_key.rs  index.rs  insert_priority.rs  insert_value.rs  insert_values.rs  mod.rs  on_update_value.rs  primary_key.rs  set.rs  table.rs  table_option.rs  update.rs  where_stmts.rs
src/parser/types/assignments/: mod.rs
src/parser/types/column/: mod.rs  template.sql
src/parser/types/create_table_statement/: mod.rs  template.sql
src/parser/types/data_type/: mod.rs  template.sql
src/parser/types/database/: mod.rs  template.sql
src/parser/types/database_option/: mod.rs  template.sql
src/parser/types/default_value/: mod.rs  template.sql
src/parser/types/delete/: mod.rs
src/parser/types/foreign_key/: mod.rs  template.sql
src/parser/types/index/: mod.rs  template.sql
src/parser/types/insert/: mod.rs
src/parser/types/insert_value/: mod.rs
src/parser/types/insert_values/: mod.rs
src/parser/types/on_update_value/: mod.rs  template.sql
src/parser/types/primary_key/: mod.rs  primary_key.sql  template.sql
src/parser/types/priority/: mod.rs
src/parser/types/set/: mod.rs
src/parser/types/table/: mod.rs  table.sql
src/parser/types/table_option/: mod.rs  template.sql
src/parser/types/update/: mod.rs
src/parser/types/where_stmts/: mod.rs
tests/: more.yaml  schema_dump.sql  simple.toml
wix/: main.wxs
