[package]
name = "sqlex"
authors = ['Ari Lerner <me@ari.io>']
version = "0.1.9"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/auser/sqlex"
description = "A tool to extract tables from a sql dump and run sql queries on them"
homepage = "https://github.com/auser/sqlex"

[package.metadata.wix]
upgrade-guid = "606DFD57-362C-4E34-80E6-3938AE57B22F"
path-guid = "330D35B9-B6C8-436C-A0B6-5AB29575E85A"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
config = "0.14.0"
fakeit = "1.2.0"
lazy_static = "1.5.0"
paste = "1.0.15"
pest = "2.7.10"
pest_derive = "2.7.10"
rayon = "1.10.0"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
sql-insight = "0.1.1"
sql-parse = "0.20.0"
strum = "0.26.3"
strum_macros = "0.26.3"
uuid = { version = "1.9.1", features = ["v4"] }

[dev-dependencies]
tempfile = "3.10.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
pre-release-commit-message = "release: {{version}}"
publish = false

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.17.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew", "msi"]
# A GitHub repo to push Homebrew formulas to
tap = "auser/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "x86_64-pc-windows-msvc",
    "aarch64-unknown-linux-gnu",
    "x86_64-unknown-linux-gnu",
]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".tar.gz"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# A namespace to use when publishing this package to the npm registry
npm-scope = "@auser"
# Whether to install an updater program
install-updater = true
